--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 body{
     max-width: 1600px;
+    margin: 0 auto;
 }
 
 nav{
@@ -18,6 +19,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 16px 200px 16px 200px;
+    
 }
 .logo h2{
     color: white;
@@ -55,4 +57,60 @@ nav{
 .sub-btn i{
     color: #ffffff;
 }
-
+.banner{
+    background-image:url(assets/hero-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    padding:101px 0px 101px 0px;
+    margin: 0 auto;
+    text-align: center;
+}
+.mic-bg{
+    margin: 0 auto;
+    width: 116px;
+    position: relative;
+    top: -280px;
+}
+.mic-pic{
+    margin: 0 auto;
+    width: 350px;
+}
+.new-btn{
+    font-weight: bold;
+    background-color: rgba(28, 255, 127, 0.781);
+    color: rgb(0, 0, 0);
+    padding: 2px 10px;
+    border-radius: 20px;
+    position: relative;
+    left: 110px;
+    top: 50px;
+    box-shadow: 0px 0px 10px;
+}
+.titl{
+    position:relative;
+    top: -130px;
+    
+}
+.titl h2{
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 3.5em;
+}
+.titl p{
+    color: #ffffff;
+}
+.titl-btn-1{
+    background:linear-gradient(to right, yellow ,rgb(225, 64, 166) ,rgb(225,64,166));
+    border: none;
+    border-radius: 30px;
+    padding: 5px 15px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.titl-btn-2{
+    margin-top: 20px;
+    border: 1px solid;
+    padding: 5px 15px;
+    border-radius: 30px;
+}
