--- a/style.css
+++ b/style.css
@@ -301,3 +301,30 @@ iframe{
 
     text-align: left;
 }
+
+footer{
+    background-image: url(assets/footer-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1200px;
+    padding: 120px;
+    margin: 0 auto;
+    /* text-align: center; */
+}
+
+.footer-link{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+
+.copy{
+    padding-top: 20px;
+}
+
+.twitor-icon,.yt-i,.ap-i,.spt-i{
+    width: 30px;
+    height: 30px;
+}
+.footer-logo{
+    padding-bottom: 20px;
+}
